objects/Content_Viewing_Info__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Content Viewing Infos</relationshipLabel>
        <relationshipName>Content_Viewing_Infos</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Content Viewing Infos</relationshipLabel>
        <relationshipName>Content_Viewing_Infos</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Content_Version_URL__c</fullName>
        <formula>HYPERLINK( &apos;/&apos; + Content_Version__c , Name  )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Content Version URL</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Content_Version__c</fullName>
        <label>Content Version</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Location_Map__c</fullName>
        <formula>IMAGE(&apos;https://maps.googleapis.com/maps/api/staticmap?zoom=14&amp;size=300x200&amp;markers=color:red|label:S|&apos;+ TEXT( location__Latitude__s ) + &apos;,&apos; + TEXT( location__Longitude__s )+ &apos;&amp;key=&apos; + $Setup.Google_Maps_API_Key__c.Key__c, &apos;Location Map&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Location Map</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Content Viewing Infos</relationshipLabel>
        <relationshipName>Content_Viewing_Infos</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Star_Rating__c</fullName>
        <label>Star Rating</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>View_Datetime__c</fullName>
        <label>View Datetime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Viewing_Duration__c</fullName>
        <label>Viewing Duration</label>
        <precision>18</precision>
        <scale>14</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>location__c</fullName>
        <label>location</label>
        <scale>14</scale>
        <type>Location</type>
    </fields>
    <label>Content Viewing Info</label>
    <language>en_US</language>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>View_Datetime__c</columns>
        <columns>Viewing_Duration__c</columns>
        <columns>Closer__location__Latitude__s</columns>
        <columns>Closer__location__Longitude__s</columns>
        <columns>Opportunity__c</columns>
        <columns>Account__c</columns>
        <columns>Contact__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Meeting Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Content Viewing Info</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>